fixed some contrast error and fix text alignment

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,6 +5,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  min-height: 100vh;
 }
 
 h1,
@@ -16,6 +17,8 @@ h4 {
 
 p,
 a,
+ul,
+li,
 button,
 input,
 label {
@@ -141,7 +144,7 @@ label {
 .btn-primary {
   @include c.PrimaryButton(
     u.color(primary__pink),
-    u.color(neutral__white),
+    u.color(neutral__black),
     1.25rem,
     1.25rem,
     u.weight(bold)
@@ -255,6 +258,12 @@ label {
 .getStartedToday {
   text-align: center;
 
+  @media screen and (width > 50rem) {
+    & .section__heading {
+      text-align: center;
+    }
+  }
+
   #{&}__btn-center {
     padding: 2rem;
 
@@ -279,7 +288,7 @@ label {
     height: auto;
 
     @media screen and (width > 50rem) {
-      top: -145px;
+      top: -140px;
     }
   }
 
@@ -343,7 +352,7 @@ label {
         u.weight(bold),
         0.75rem,
         1rem,
-        u.color(neutral__white)
+        u.color(neutral__black)
       );
     }
 
